--- a/src/static/index.html
+++ b/src/static/index.html
@@ -4,7 +4,15 @@
   <meta charset="utf-8">
   <title>Quill Feedback View</title>
 
-  <link href="_static/css/bootstrap.min.css" rel="stylesheet">
+  <link href="bootstrap/dist/css/bootstrap.css" rel="stylesheet">
+  <!-- TODO: move JS to bottom of the page -->
+  <script src="react/react.js"></script>
+  <script src="react-router/dist/react-router.js"></script>
+  <!-- TODO: remove jquery dependency -->
+  <script src="jquery/dist/jquery.js"></script>
+  <script src="bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="http://172.17.0.3:35729/livereload.js"></script>
+
   <style>
       div[class^="col-md"] {
         border: 1px solid #ddd;
@@ -121,11 +129,5 @@
       </div>
 
     </div>
-
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="_static/js/bootstrap.min.js"></script>
-    <script src="http://localhost:35729/livereload.js"></script>
   </body>
 </html>
