Make a request for data.

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -4,15 +4,13 @@
   <meta charset="utf-8">
   <title>Quill Feedback View</title>
 
-  <link href="bootstrap/dist/css/bootstrap.css" rel="stylesheet">
+  <link href="/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
   <!-- TODO: move JS to bottom of the page -->
   <script src="/react/react.js"></script>
   <script src="/react/JSXTransformer.js"></script>
   <script src="/react-router/dist/react-router.js"></script>
-  <!-- TODO: remove jquery dependency -->
-  <script src="/jquery/dist/jquery.js"></script>
-  <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
-  <script src="http://172.17.0.3:35729/livereload.js"></script>
+  <script src="/reqwest/reqwest.min.js"></script>
+  <script src="http://172.17.0.103:35729/livereload.js"></script>
 
   <style>
       div[class^="col-md"] {
