Convert jsx to cjsx.

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -37,6 +37,6 @@
 
 
     </div>
-    <script type="text/jsx;harmony=true" src="/js/app.jsx"></script>
+    <script type="text/jsx;harmony=true" src="/app.js"></script>
   </body>
 </html>
