--- a/src/static/index.html
+++ b/src/static/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Quill Feedback View</title>
+  <title>Quill</title>
 
   <link href="/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
   <!-- TODO: move JS to bottom of the page -->
@@ -25,18 +25,6 @@
 
 </head>
 <body> 
-  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-    <div class="container">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="#">Quill</a>
-      </div>
-    </div>
-  </nav>
-
-  <div class="container" id="content">
-
-
-    </div>
-    <script type="text/jsx;harmony=true" src="/app.js"></script>
-  </body>
+  <script type="text/jsx;harmony=true" src="/app.js"></script>
+</body>
 </html>
