--- a/src/static/index.html
+++ b/src/static/index.html
@@ -10,7 +10,7 @@
   <script src="/react/JSXTransformer.js"></script>
   <script src="/react-router/dist/react-router.js"></script>
   <script src="/reqwest/reqwest.min.js"></script>
-  <script src="http://172.17.0.103:35729/livereload.js"></script>
+  <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js"></' + 'script>')</script>
 
   <style>
       div[class^="col-md"] {
@@ -25,6 +25,6 @@
 
 </head>
 <body> 
-  <script type="text/jsx;harmony=true" src="/app.js"></script>
+  <script type="text/jsx;harmony=true" src="/js/app.js"></script>
 </body>
 </html>
